# symphony

./: .gitignore  Containerfile  README.md  WORKFLOW.md  WORKFLOW.md.example  entrypoint.sh  opencode.json  package.json  tsconfig.json
.opencode/: worktree_init.sh
.opencode/mcp/: linear_graphql.mjs
.opencode/plugins/: linear_graphql.ts
docs/: ts-audit.md
python/: README.md  pyproject.toml
python/src/symphony/: __main__.py  agent_runner.py  cli.py  config.py  exceptions.py  hooks.py  log.py  models.py  orchestrator.py  path_safety.py  prompt_builder.py  status.py  workflow.py  workflow_store.py  workspace.py
python/src/symphony/server/: app.py  router.py
python/src/symphony/tracker/: base.py  linear.py  memory.py
python/tests/: conftest.py  test_agent_runner.py  test_cli.py  test_config.py  test_e2e.py  test_hooks.py  test_http_server.py  test_log.py  test_models.py  test_orchestrator.py  test_path_safety.py  test_prompt_builder.py  test_status.py  test_tracker_linear.py  test_tracker_memory.py  test_workflow.py  test_workflow_store.py  test_workspace.py
python/tests/fixtures/: workflow_bad_yaml.md  workflow_full.md  workflow_minimal.md  workflow_no_frontmatter.md
src/: agent_runner.ts  config.ts  hooks.ts  main.ts  opencode_client.ts  orchestrator.ts  path_safety.ts  prompt_builder.ts  setup.ts  workflow.ts  workflow_store.ts  workspace.ts
tests/: agent_runner.test.ts  config.test.ts  hooks.test.ts  orchestrator.test.ts  tracker_linear.test.ts  tracker_memory.test.ts  workflow.test.ts
typescript/: AGENTS.md  README.md  WORKFLOW.md  package.json
(+56 files in other folders)
